Interfaces/bolas/error
mainwindow.cpp: In member function ‘virtual void MainWindow::paintEvent(QPaintEvent*)’:
mainwindow.cpp:52:42: warning: unused parameter ‘e’ [-Wunused-parameter]
 void MainWindow::paintEvent(QPaintEvent *e){
                             ~~~~~~~~~~~~~^
mainwindow.cpp: In member function ‘void MainWindow::slotMostrarDialogoInfo()’:
mainwindow.cpp:77:15: error: no matching function for call to ‘DInformacion::DInformacion()’
  DInformacion dialogo;
               ^~~~~~~
In file included from mainwindow.cpp:12:
DInformacion.h:10:3: note: candidate: ‘DInformacion::DInformacion(int, int, int, QWidget*)’
   DInformacion(int numBolas, int alt, int anch, QWidget * parent = 0);
   ^~~~~~~~~~~~
DInformacion.h:10:3: note:   candidate expects 4 arguments, 0 provided
mainwindow.cpp:78:53: error: no match for call to ‘(DInformacion) (int, int, int)’
  dialogo(bolas.size(), this->width(), this->height());
                                                     ^
make: *** [Makefile:427: mainwindow.o] Error 1
